--- a/src/TidyWindow.App/Controls/Loaders/BootstrapInstallLoader.xaml
+++ b/src/TidyWindow.App/Controls/Loaders/BootstrapInstallLoader.xaml
@@ -10,49 +10,55 @@
         <LinearGradientBrush x:Key="LoaderBackdropBrush"
                              StartPoint="0,0"
                              EndPoint="1,1">
-            <GradientStop Color="#C005111B"
+            <GradientStop Color="#B0040F21"
                           Offset="0"/>
-            <GradientStop Color="#C0071C2C"
-                          Offset="0.55"/>
-            <GradientStop Color="#C009243C"
+            <GradientStop Color="#B00A1D31"
                           Offset="1"/>
         </LinearGradientBrush>
         <SolidColorBrush x:Key="LoaderSurfaceBrush"
-                          Color="#0B1322"/>
+                          Color="#08141F"/>
         <SolidColorBrush x:Key="LoaderBorderBrush"
-                          Color="#1F2D44"/>
-        <SolidColorBrush x:Key="LoaderPrimaryBrush"
-                          Color="#22C55E"/>
+                          Color="#143026"/>
         <SolidColorBrush x:Key="LoaderAccentBrush"
+                          Color="#22C55E"/>
+        <SolidColorBrush x:Key="LoaderAccentSoftBrush"
                           Color="#86EFAC"/>
         <SolidColorBrush x:Key="LoaderMutedBrush"
-                          Color="#9CAFCB"/>
+                          Color="#9FB6C6"/>
 
         <Storyboard x:Key="LoaderSpinnerStoryboard">
             <DoubleAnimation Storyboard.TargetName="SpinnerRotateTransform"
                              Storyboard.TargetProperty="Angle"
                              From="0"
                              To="360"
-                             Duration="0:0:1.8"
+                             Duration="0:0:2"
+                             RepeatBehavior="Forever"/>
+            <DoubleAnimation Storyboard.TargetName="OrbitRotateTransform"
+                             Storyboard.TargetProperty="Angle"
+                             From="0"
+                             To="360"
+                             Duration="0:0:3.4"
+                             RepeatBehavior="Forever"/>
+            <DoubleAnimation Storyboard.TargetName="PulseScaleTransform"
+                             Storyboard.TargetProperty="ScaleX"
+                             From="1"
+                             To="1.2"
+                             Duration="0:0:1.2"
+                             AutoReverse="True"
+                             RepeatBehavior="Forever"/>
+            <DoubleAnimation Storyboard.TargetName="PulseScaleTransform"
+                             Storyboard.TargetProperty="ScaleY"
+                             From="1"
+                             To="1.2"
+                             Duration="0:0:1.2"
+                             AutoReverse="True"
                              RepeatBehavior="Forever"/>
             <DoubleAnimation Storyboard.TargetName="ProgressSweepTranslate"
                              Storyboard.TargetProperty="X"
                              From="-180"
                              To="180"
-                             Duration="0:0:1.6"
+                             Duration="0:0:1.8"
                              AutoReverse="True"
-                             RepeatBehavior="Forever"/>
-            <DoubleAnimation Storyboard.TargetName="InstallOrbitDotOuterRotate"
-                             Storyboard.TargetProperty="Angle"
-                             From="0"
-                             To="360"
-                             Duration="0:0:3"
-                             RepeatBehavior="Forever"/>
-            <DoubleAnimation Storyboard.TargetName="InstallOrbitDotInnerRotate"
-                             Storyboard.TargetProperty="Angle"
-                             From="360"
-                             To="0"
-                             Duration="0:0:2.4"
                              RepeatBehavior="Forever"/>
         </Storyboard>
     </UserControl.Resources>
@@ -68,9 +74,9 @@
                 CornerRadius="28"
                 Padding="40"
                 BorderBrush="{StaticResource LoaderBorderBrush}"
-                BorderThickness="1.4">
+                BorderThickness="1.25">
             <Border.Effect>
-                <DropShadowEffect Color="#040A15"
+                <DropShadowEffect Color="#020A12"
                                   Direction="270"
                                   ShadowDepth="6"
                                   BlurRadius="28"
@@ -78,155 +84,139 @@
             </Border.Effect>
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="220"/>
                     <ColumnDefinition Width="32"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Column="0"
-                            VerticalAlignment="Center">
-                    <Grid Width="110"
-                          Height="110">
-                        <Ellipse Width="110"
-                                 Height="110"
-                                 Stroke="#1D2A40"
-                                 StrokeThickness="2.2"
-                                 HorizontalAlignment="Center"
-                                 VerticalAlignment="Center"/>
-                        <Ellipse Width="84"
-                                 Height="84"
-                                 Stroke="#253853"
+                <Grid Grid.Column="0"
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center">
+                    <Grid Width="170"
+                          Height="170">
+                        <Ellipse Fill="#06111A"
+                                 Stroke="#0F1E2A"
+                                 StrokeThickness="1.5"/>
+                        <Ellipse Width="150"
+                                 Height="150"
+                                 Stroke="#143626"
                                  StrokeThickness="2"
-                                 StrokeDashArray="3 5"
-                                 HorizontalAlignment="Center"
-                                 VerticalAlignment="Center"/>
-                        <Ellipse Width="84"
-                                 Height="84"
-                                 Stroke="{StaticResource LoaderPrimaryBrush}"
-                                 StrokeThickness="6"
-                                 StrokeDashArray="1 2"
+                                 StrokeDashArray="16 10"
+                                 Opacity="0.6"/>
+                        <Ellipse Width="150"
+                                 Height="150"
+                                 Stroke="{StaticResource LoaderAccentBrush}"
+                                 StrokeThickness="4"
+                                 StrokeDashArray="26 18"
                                  StrokeStartLineCap="Round"
                                  StrokeEndLineCap="Round"
-                                 HorizontalAlignment="Center"
-                                 VerticalAlignment="Center"
                                  RenderTransformOrigin="0.5,0.5">
                             <Ellipse.RenderTransform>
                                 <RotateTransform x:Name="SpinnerRotateTransform"/>
                             </Ellipse.RenderTransform>
                         </Ellipse>
-                        <Path Data="M2,6 C12,2 24,2 34,6"
-                              Stroke="#15803D"
-                              StrokeThickness="2"
-                              StrokeStartLineCap="Round"
-                              StrokeEndLineCap="Round"
-                              Width="52"
-                              Height="16"
-                              HorizontalAlignment="Center"
-                              VerticalAlignment="Top"
-                              Margin="0,8,0,0"/>
-                        <Ellipse Width="94"
-                                 Height="94"
-                                 Stroke="#143023"
-                                 StrokeDashArray="4 6"
+                        <Ellipse Width="110"
+                                 Height="110"
+                                 Fill="#092415"
+                                 Opacity="0.8"/>
+                        <Ellipse Width="90"
+                                 Height="90"
+                                 Fill="#0F2D1C"
+                                 Stroke="#184027"
                                  StrokeThickness="1.2"
-                                 Opacity="0.65"
-                                 HorizontalAlignment="Center"
-                                 VerticalAlignment="Center"/>
-                        <Grid Width="94"
-                              Height="94"
+                                 Opacity="0.9"/>
+                        <Ellipse Width="70"
+                                 Height="70"
+                                 Fill="{StaticResource LoaderAccentBrush}"
+                                 Opacity="0.25"
+                                 RenderTransformOrigin="0.5,0.5">
+                            <Ellipse.RenderTransform>
+                                <ScaleTransform x:Name="PulseScaleTransform"
+                                                ScaleX="1"
+                                                ScaleY="1"/>
+                            </Ellipse.RenderTransform>
+                        </Ellipse>
+                        <Grid Width="150"
+                              Height="150"
                               RenderTransformOrigin="0.5,0.5">
                             <Grid.RenderTransform>
-                                <RotateTransform x:Name="InstallOrbitDotOuterRotate"/>
+                                <RotateTransform x:Name="OrbitRotateTransform"/>
                             </Grid.RenderTransform>
-                            <Ellipse Width="18"
-                                     Height="18"
-                                     Fill="#054321"
-                                     Stroke="#0F2016"
-                                     StrokeThickness="1"
-                                     HorizontalAlignment="Center"
-                                     VerticalAlignment="Top"
-                                     Margin="0,-10,0,0"/>
-                            <Ellipse Width="12"
-                                     Height="12"
-                                     Fill="#FDE047"
-                                     Stroke="#463F0B"
-                                     StrokeThickness="1"
-                                     HorizontalAlignment="Right"
-                                     VerticalAlignment="Center"
-                                     Margin="0,0,-8,0"/>
-                        </Grid>
-                        <Grid Width="70"
-                              Height="70"
-                              RenderTransformOrigin="0.5,0.5">
-                            <Grid.RenderTransform>
-                                <RotateTransform x:Name="InstallOrbitDotInnerRotate"/>
-                            </Grid.RenderTransform>
-                            <Ellipse Width="10"
-                                     Height="10"
-                                     Fill="#22C55E"
-                                     Stroke="#0E3B20"
-                                     StrokeThickness="1"
-                                     HorizontalAlignment="Center"
-                                     VerticalAlignment="Bottom"
-                                     Margin="0,0,0,-8"/>
+                            <Border Width="16"
+                                    Height="16"
+                                    CornerRadius="8"
+                                    Background="{StaticResource LoaderAccentSoftBrush}"
+                                    BorderBrush="#0E2B1C"
+                                    BorderThickness="1"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Top"
+                                    Margin="0,-8,0,0"/>
                         </Grid>
                     </Grid>
-                </StackPanel>
+                </Grid>
 
-                    <Grid Grid.Column="1"
-                        Width="32"/>
+                <Rectangle Grid.Column="1"
+                           Width="1"
+                           Margin="16,0"
+                           Fill="#1B3B29"
+                           Opacity="0.35"/>
 
                 <StackPanel Grid.Column="2"
                             VerticalAlignment="Center">
                     <TextBlock Text="Running install or repair"
                                FontSize="22"
                                FontWeight="SemiBold"
-                               Foreground="#F8FAFC"/>
-                    <TextBlock Text="Applying curated bootstrap automation to bring package managers online"
+                               Foreground="#F2FFF5"/>
+                    <TextBlock Text="Bringing package managers online through the bootstrap helper."
                                Margin="0,6,0,0"
                                FontSize="13"
                                Foreground="{StaticResource LoaderMutedBrush}"
                                TextWrapping="Wrap"/>
 
                     <StackPanel Margin="0,18,0,0">
-                        <DockPanel Margin="0,0,0,8">
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0,0,0,8">
                             <Ellipse Width="8"
                                      Height="8"
-                                     Fill="{StaticResource LoaderPrimaryBrush}"
-                                     Margin="0,4,10,0"/>
-                            <TextBlock Text="Validating runtime prerequisites and environment variables"
+                                     Fill="{StaticResource LoaderAccentBrush}"
+                                     VerticalAlignment="Center"/>
+                            <TextBlock Text="Validating PowerShell, network reachability, and elevation state"
                                        Foreground="#E2F8EC"
                                        FontSize="12"
+                                       Margin="10,0,0,0"
                                        TextWrapping="Wrap"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,0,0,8">
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0,0,0,8">
                             <Ellipse Width="8"
                                      Height="8"
-                                     Fill="#34D399"
-                                     Margin="0,4,10,0"/>
-                            <TextBlock Text="Executing installer or repair scripts with elevated permissions"
+                                     Fill="{StaticResource LoaderAccentSoftBrush}"
+                                     VerticalAlignment="Center"/>
+                            <TextBlock Text="Installing or repairing package manager binaries and services"
                                        Foreground="#E2F8EC"
                                        FontSize="12"
+                                       Margin="10,0,0,0"
                                        TextWrapping="Wrap"/>
-                        </DockPanel>
-                        <DockPanel>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
                             <Ellipse Width="8"
                                      Height="8"
-                                     Fill="#FACC15"
-                                     Margin="0,4,10,0"/>
-                            <TextBlock Text="Refreshing telemetry and health markers before resuming detection"
+                                     Fill="#BBF7D0"
+                                     VerticalAlignment="Center"/>
+                            <TextBlock Text="Replaying telemetry markers so detection can resume cleanly"
                                        Foreground="#E2F8EC"
                                        FontSize="12"
+                                       Margin="10,0,0,0"
                                        TextWrapping="Wrap"/>
-                        </DockPanel>
+                        </StackPanel>
                     </StackPanel>
 
                     <Border Margin="0,22,0,0"
                             Height="6"
                             CornerRadius="3"
-                            Background="#132032">
+                            Background="#0C1F16">
                         <Grid ClipToBounds="True">
-                            <Rectangle Width="240"
+                            <Rectangle Width="220"
                                        Height="6"
                                        Fill="{StaticResource LoaderAccentBrush}">
                                 <Rectangle.RenderTransform>
@@ -240,7 +230,7 @@
                     <TextBlock Text="Keep this page open while we finish repairing your tooling."
                                Margin="0,14,0,0"
                                FontSize="12"
-                               Foreground="#94A3B8"
+                               Foreground="#9FB6C6"
                                TextWrapping="Wrap"/>
                 </StackPanel>
             </Grid>
